Name:			sesyrel
Version:		0.1
Description:		Analytical integration of (a little bit) dynamic fault trees
Author:			Vladimir Koroljov
Maintainer:		balodja@gmail.com
Build-Type:		Simple
Cabal-Version:		>= 1.8

Executable sesyrel
  Main-is:		Sesyrel.hs
  Hs-Source-Dirs:	src
  GHC-Options:		-Wall -O2
  -- -prof -fprof-auto -fprof-cafs -rtsopts
  Build-Depends:	base >= 4, mtl >= 2, text >= 0.11, containers, signed-multiset

Test-suite sesyrel-test
  Type:			exitcode-stdio-1.0
  Main-is:		Main.hs
  Hs-Source-Dirs:	tests, src
  Build-Depends:
    base >= 4, mtl >= 2, text >= 0.11, containers, signed-multiset,
    QuickCheck >= 2, test-framework >= 0.8,
    test-framework-quickcheck2 >= 0.3